Added a comprehensive todo list

--- a/README
+++ b/README
@@ -1,3 +1,14 @@
 Another attempt at writing a mud.
 
 * Storage system done
+
+TODO:
+
+* A gamestate object
+  + This would hold things like the freeids, the player name list, and all the preamble such as titlescreen and motd
+	+ By that I mean ids of storage objects which hold them
+* Player support
+* Networking
+* Presentation
+* Commands
+* Methods to add things to the game
